Added Encoder block component

--- a/notebooks/5-Encoder_block.ipynb
+++ b/notebooks/5-Encoder_block.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "6d5b7d68",
    "metadata": {},
    "outputs": [],
@@ -107,8 +107,8 @@
     "        mha_output = self.output_projection(attention)\n",
     "        return mha_output\n",
     "    \n",
-    "    def __call__(self, batched_input_data:Annotated[torch.Tensor, \"batch of data from the input data\"]):\n",
-    "        return self.forward(batched_input_data=batched_input_data)"
+    "    # def __call__(self, batched_input_data:Annotated[torch.Tensor, \"batch of data from the input data\"]):\n",
+    "    #     return self.forward(batched_input_data=batched_input_data)"
    ]
   },
   {
@@ -143,6 +143,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5ccee624",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from typing import List, Annotated\n",
+    "\n",
+    "class FeedForward(nn.Module):\n",
+    "    def __init__(self, embed_dim:int, hidden_dim:int, dropout:float = 0.1,  bias:bool = True):\n",
+    "        super().__init__()\n",
+    "        self.w1 = nn.Linear(embed_dim, hidden_dim, bias=bias)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.w2 = nn.Linear(hidden_dim, embed_dim, bias=bias)\n",
+    "\n",
+    "    def forward(self, input_data:torch.Tensor) -> torch.Tensor:\n",
+    "        layer = self.w1(input_data)\n",
+    "        output = self.relu(layer)\n",
+    "        dropout = self.dropout(output)\n",
+    "        layer = self.w2(dropout)\n",
+    "        \n",
+    "        return layer\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8c7851f1",
    "metadata": {},
@@ -152,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3d43c7ba",
    "metadata": {},
    "outputs": [
@@ -168,6 +197,7 @@
     }
    ],
    "source": [
+    "\n",
     "input_data = torch.arange(100 * 10 * 8).reshape(100, 10, 8)\n",
     "input_data.shape"
    ]
@@ -239,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1cc33271",
    "metadata": {},
    "outputs": [
@@ -249,56 +279,6 @@
      "text": [
       "All parameters are set for multihead attention\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[-31.3945,  21.9640,  -8.2486,  12.3427, -23.8461, -35.2831,  -2.4613,\n",
-       "          -11.2936],\n",
-       "         [-31.6668,  22.1484,  -8.3256,  12.4455, -24.0442, -35.5576,  -2.4822,\n",
-       "          -11.4000],\n",
-       "         [-31.6668,  22.1484,  -8.3256,  12.4455, -24.0442, -35.5576,  -2.4822,\n",
-       "          -11.4000],\n",
-       "         [-31.6668,  22.1484,  -8.3256,  12.4455, -24.0442, -35.5576,  -2.4822,\n",
-       "          -11.4000],\n",
-       "         [-31.6668,  22.1484,  -8.3256,  12.4455, -24.0442, -35.5576,  -2.4822,\n",
-       "          -11.4000],\n",
-       "         [-31.6668,  22.1484,  -8.3256,  12.4455, -24.0442, -35.5576,  -2.4822,\n",
-       "          -11.4000],\n",
-       "         [-31.6668,  22.1484,  -8.3256,  12.4455, -24.0442, -35.5576,  -2.4822,\n",
-       "          -11.4000],\n",
-       "         [-31.6668,  22.1484,  -8.3256,  12.4455, -24.0442, -35.5576,  -2.4822,\n",
-       "          -11.4000],\n",
-       "         [-31.6668,  22.1484,  -8.3256,  12.4455, -24.0442, -35.5576,  -2.4822,\n",
-       "          -11.4000],\n",
-       "         [-31.6668,  22.1484,  -8.3256,  12.4455, -24.0442, -35.5576,  -2.4822,\n",
-       "          -11.4000]],\n",
-       "\n",
-       "        [[-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462],\n",
-       "         [-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462],\n",
-       "         [-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462],\n",
-       "         [-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462],\n",
-       "         [-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462],\n",
-       "         [-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462],\n",
-       "         [-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462],\n",
-       "         [-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462],\n",
-       "         [-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462],\n",
-       "         [-37.1096,  22.9110,   2.8460,  23.1140, -40.7732, -93.6793,  -1.6394,\n",
-       "           -0.9462]]], grad_fn=<ViewBackward0>)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -307,9 +287,251 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "431f895c",
+   "metadata": {},
+   "source": [
+    "### Apply Add & Norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ee567596",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 10, 8])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_output_bach_data = mha_output_for_batched_data + positional_encoded_batch_data\n",
+    "ln = LayerNormalization(embed_dim=embed_dim)\n",
+    "layer_normalized_batch_data = ln(add_output_bach_data)\n",
+    "\n",
+    "layer_normalized_batch_data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3615150",
+   "metadata": {},
+   "source": [
+    "### Add this to a FFN to capture the non-linearity in the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c4de687f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ffn = FeedForward(embed_dim=embed_dim, hidden_dim=1024)\n",
+    "ffn_batched_data = ffn(layer_normalized_batch_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87b75a4a",
+   "metadata": {},
+   "source": [
+    "### Get the encoder output after add & Norm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee567596",
+   "id": "fd01f834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ffn_layered_batch_data = ffn_batched_data + layer_normalized_batch_data\n",
+    "encoder_output = ln(ffn_layered_batch_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b86e176",
+   "metadata": {},
+   "source": [
+    "### This is how encoder block works but since we need to do this Nx = 8 as mentioned in the paper lets implement this using loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a39717f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Nx = 8\n",
+    "pe = PositionalEncoding(10, 8)\n",
+    "mha = MultiHeadAttention(num_heads=num_heads, embed_dim=embed_dim, seq_length=seq_len)\n",
+    "ln1 = LayerNormalization(embed_dim=embed_dim)\n",
+    "ln2 = LayerNormalization(embed_dim=embed_dim)\n",
+    "ffn = FeedForward(embed_dim=embed_dim, hidden_dim=1024)\n",
+    "\n",
+    "# This is for birst batch of the data\n",
+    "positional_encoded_batch_data = pe(batch_data)\n",
+    "for i in range(Nx):\n",
+    "    mha_output_for_batched_data = mha(positional_encoded_batch_data)\n",
+    "    layer_normalized_batch_data = ln1(mha_output_for_batched_data + positional_encoded_batch_data)\n",
+    "    ffn_batched_data = ffn(layer_normalized_batch_data)\n",
+    "    encoder_output = ln2(ffn_batched_data + layer_normalized_batch_data)\n",
+    "    positional_encoded_batch_data = encoder_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf58ee08",
+   "metadata": {},
+   "source": [
+    "### we made a mistake\n",
+    "- every encoder block in Nx should have separate MHA, FFN layer_norm parameters but we continued \n",
+    "updating same weights.\n",
+    "\n",
+    "- to make separate parameters either we intalize and keep track of everything(unnecary code)\n",
+    "\n",
+    "- use nn.ModuleList to keep track of all parameter for each encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3d39eaa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderBlock(nn.Module):\n",
+    "    def __init__(self, seq_len:int, embed_dim:int, hidden_dim:int,num_heads:int, dropout = 0.1, bias:bool = False):\n",
+    "        super().__init__()\n",
+    "        self.mha = MultiHeadAttention(num_heads=num_heads, embed_dim=embed_dim, seq_length=seq_len)\n",
+    "        self.ln1 = LayerNormalization(embed_dim=embed_dim)\n",
+    "        self.ln2 = LayerNormalization(embed_dim=embed_dim)\n",
+    "        self.ffn = FeedForward(embed_dim=embed_dim, hidden_dim=hidden_dim, dropout=dropout, bias=bias)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x:torch.Tensor) -> torch.Tensor:\n",
+    "        # Multi-head attention + residual + norm\n",
+    "        x_mha = self.mha(x)\n",
+    "        x = self.ln1(x + self.dropout(x_mha))\n",
+    "\n",
+    "        # Feedforward + residual + norm\n",
+    "        x_ffn = self.ffn(x)\n",
+    "        x = self.ln2(x + self.dropout(x_ffn))\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, Nx, embed_dim, seq_len, num_heads, ff_hidden_dim, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.layers = nn.ModuleList([\n",
+    "            EncoderBlock(seq_len, embed_dim, ff_hidden_dim, num_heads, dropout)\n",
+    "            for _ in range(Nx)\n",
+    "        ])\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x)\n",
+    "        return x\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d470364b",
+   "metadata": {},
+   "source": [
+    "### Test with above input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b3057529",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 10, 8])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_data = torch.arange(100 * 10 * 8).reshape(100, 10, 8).float()\n",
+    "batch = 2\n",
+    "seq_len = 10\n",
+    "embed_dim = 8\n",
+    "num_heads = 2\n",
+    "batch_data = input_data[:batch]\n",
+    "batch_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fb71125f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All parameters are set for multihead attention\n",
+      "All parameters are set for multihead attention\n",
+      "All parameters are set for multihead attention\n",
+      "All parameters are set for multihead attention\n",
+      "All parameters are set for multihead attention\n",
+      "All parameters are set for multihead attention\n",
+      "All parameters are set for multihead attention\n",
+      "All parameters are set for multihead attention\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoder = Encoder(Nx=8,\n",
+    "                  embed_dim=embed_dim,\n",
+    "                  seq_len=seq_len,\n",
+    "                  ff_hidden_dim=1024,\n",
+    "                  num_heads=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5fac3c38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder_output = encoder(batch_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "459577c2",
+   "metadata": {},
+   "source": [
+    "### And thats it we are successfully able to build the encoder block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "383c8926",
    "metadata": {},
    "outputs": [],
    "source": []
