--- a/notebooks/3-multi-head-attention.ipynb
+++ b/notebooks/3-multi-head-attention.ipynb
@@ -486,99 +486,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "e8f11e8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = torch.arange(36).reshape(2, 3, 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "8ef815fc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 0,  1,  2,  3,  4,  5],\n",
-       "         [ 6,  7,  8,  9, 10, 11],\n",
-       "         [12, 13, 14, 15, 16, 17]],\n",
-       "\n",
-       "        [[18, 19, 20, 21, 22, 23],\n",
-       "         [24, 25, 26, 27, 28, 29],\n",
-       "         [30, 31, 32, 33, 34, 35]]])"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "40a2c8da",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 0,  1,  2,  3,  4,  5],\n",
-       "         [ 6,  7,  8,  9, 10, 11]],\n",
-       "\n",
-       "        [[12, 13, 14, 15, 16, 17],\n",
-       "         [18, 19, 20, 21, 22, 23]],\n",
-       "\n",
-       "        [[24, 25, 26, 27, 28, 29],\n",
-       "         [30, 31, 32, 33, 34, 35]]])"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.reshape(3, 2, 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "88bcfacd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 0,  1,  2,  3,  4,  5],\n",
-       "         [18, 19, 20, 21, 22, 23]],\n",
-       "\n",
-       "        [[ 6,  7,  8,  9, 10, 11],\n",
-       "         [24, 25, 26, 27, 28, 29]],\n",
-       "\n",
-       "        [[12, 13, 14, 15, 16, 17],\n",
-       "         [30, 31, 32, 33, 34, 35]]])"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.transpose(1, 0) "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 81,
    "id": "ff78d90a",
    "metadata": {},
@@ -693,9 +600,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8850b0a",
+   "metadata": {},
+   "source": [
+    "### But if you carefully observe transformers archetecture there are 3 types of attention 1) Multi-Head Attention 2) Masked-Multi head Attention 3) Cross-Multihead attention\n",
+    "\n",
+    "### But if you observe our implementation till now it only suppoerts MHA & MMHA\n",
+    "\n",
+    "- Now to integrate CMHA with our code we need to tweek changes in forward pass\n",
+    "- forward method will accept 3 parameter (q_input, k_input = None, v_input = None) if k_input & v_input is None which means self attention else cross attention\n",
+    "- also make changes in the dimension i.e. instead of seq_len we need to consider both qdim(output seq) and kdim(inp seq)\n",
+    "\n",
+    "### After making above changes final MultiHead attention class looks something like this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bb68cebe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from typing import List, Annotated, Union\n",
+    "\n",
+    "\n",
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, num_heads: Annotated[int, \"No of self attention needed\"],\n",
+    "                 embed_dim: Annotated[int, \"dimension of each word\"],\n",
+    "                 bias: Annotated[bool, \"Required bias during trining\"] = False,) -> None:\n",
+    "        super().__init__()\n",
+    "        assert embed_dim % num_heads == 0, \"embed_dim % num_heads != 0\"\n",
+    "        self.num_heads = num_heads\n",
+    "        self.embed_dim = embed_dim\n",
+    "        self.head_dim = self.embed_dim // self.num_heads\n",
+    "        self.wq = nn.Linear(embed_dim, embed_dim, bias=bias)\n",
+    "        self.wk = nn.Linear(embed_dim, embed_dim, bias=bias)\n",
+    "        self.wv = nn.Linear(embed_dim, embed_dim, bias=bias)\n",
+    "        self.output_projection = nn.Linear(self.embed_dim, self.embed_dim)\n",
+    "\n",
+    "    def forward(self,\n",
+    "                q_input: Annotated[torch.Tensor, \"batch of data from the input data\"],\n",
+    "                k_input: Union[torch.Tensor, None] = None,\n",
+    "                v_input: Union[torch.Tensor, None] = None,\n",
+    "                mask: Annotated[bool, \"normal MHA or masked MHA?\"] = False) -> torch.Tensor:\n",
+    "        batch = q_input.size(0)\n",
+    "\n",
+    "        # Below code make sures algorithm is self attention not cross attention\n",
+    "        if k_input is None:\n",
+    "            k_input = q_input\n",
+    "        if v_input is None:\n",
+    "            v_input = q_input\n",
+    "\n",
+    "        q = self.wq(q_input)\n",
+    "        k = self.wk(k_input)\n",
+    "        v = self.wv(v_input)\n",
+    "\n",
+    "        # Sequence length can be diffrent for input data and output data\n",
+    "        T_q, T_k = q_input.size(1), k_input.size(1)\n",
+    "\n",
+    "        # Split the q, k, v(embed_dim) dimension as (num_head, embed_dim / num_head)\n",
+    "        q = q.reshape(batch, T_q, self.num_heads,\n",
+    "                      self.head_dim).transpose(1, 2)\n",
+    "        k = k.reshape(batch, T_k, self.num_heads,\n",
+    "                      self.head_dim).transpose(1, 2)\n",
+    "        v = v.reshape(batch, T_k, self.num_heads,\n",
+    "                      self.head_dim).transpose(1, 2)\n",
+    "\n",
+    "        # Calculate Attention\n",
+    "        k_transpose = k.transpose(-2, -1)  # (b, k, d) (b, d, p) = (b, k, p)\n",
+    "        score = (q @ k_transpose) / math.sqrt(self.head_dim)\n",
+    "        mask = torch.triu(torch.ones(T_q, T_k), diagonal=1).bool(\n",
+    "        ) if mask else torch.zeros(T_q, T_k).bool()\n",
+    "\n",
+    "        # Anyhow broadcasting works no need of unsqeeze but its good practice to\n",
+    "        # avoid broadcasting in Attentions, but clearly this step is optional\n",
+    "        mask = mask.unsqueeze(0).unsqueeze(0)\n",
+    "        score = score.masked_fill(mask, float(\"-inf\"))\n",
+    "        attention_score = torch.softmax(score, dim=-1)\n",
+    "        attention = attention_score @ v\n",
+    "\n",
+    "        # concat output of all heads\n",
+    "        attention = attention.transpose(1, 2)\n",
+    "\n",
+    "        # Attention should have sequence of length = output sequence length.\n",
+    "        attention = attention.reshape(batch, T_q, self.embed_dim)\n",
+    "\n",
+    "        # Since they are simple concatination to acutally mix all heads details we need a linear layer\n",
+    "\n",
+    "        mha_output = self.output_projection(attention)\n",
+    "        return mha_output\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09398524",
+   "metadata": {},
+   "source": [
+    "### Testing Cross-Attention with simple example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "411ed6cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Testing Cross-Attention ---\n",
+      "Query Input Shape (from decoder):      torch.Size([32, 15, 256])\n",
+      "Key/Value Input Shape (from encoder):  torch.Size([32, 20, 256])\n",
+      "\n",
+      "Final Output Shape: torch.Size([32, 15, 256])\n",
+      "\n",
+      "Notice the output sequence length matches the query's sequence length.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Setup for the Test ---\n",
+    "\n",
+    "# 1. Define hyperparameters\n",
+    "batch_size = 32\n",
+    "embed_dim = 256\n",
+    "num_heads = 8\n",
+    "decoder_seq_len = 15  # The length of the target sequence\n",
+    "encoder_seq_len = 20  # The length of the source sequence\n",
+    "\n",
+    "# 2. Instantiate the MultiHeadAttention layer\n",
+    "mha_layer = MultiHeadAttention(num_heads=num_heads, embed_dim=embed_dim)\n",
+    "\n",
+    "# 3. Create the input data\n",
+    "# This represents the decoder's input (e.g., the partially generated translation)\n",
+    "decoder_input = torch.randn(batch_size, decoder_seq_len, embed_dim) \n",
+    "\n",
+    "# This represents the encoder's output, which provides the context\n",
+    "encoder_output = torch.randn(batch_size, encoder_seq_len, embed_dim)\n",
+    "\n",
+    "print(\"--- Testing Cross-Attention ---\")\n",
+    "print(f\"Query Input Shape (from decoder):      {decoder_input.shape}\")\n",
+    "print(f\"Key/Value Input Shape (from encoder):  {encoder_output.shape}\\n\")\n",
+    "\n",
+    "# --- Perform the Cross-Attention ---\n",
+    "\n",
+    "# The decoder_input provides the queries.\n",
+    "# The encoder_output provides the keys and values.\n",
+    "output = mha_layer(q_input=decoder_input, k_input=encoder_output, v_input=encoder_output)\n",
+    "\n",
+    "print(f\"Final Output Shape: {output.shape}\")\n",
+    "print(\"\\nNotice the output sequence length matches the query's sequence length.\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb68cebe",
+   "id": "0aaa702f",
    "metadata": {},
    "outputs": [],
    "source": []
